syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "contextMenu.proto";
import "profileFeature.proto";
import "publicServiceStatus.proto";
import "session/sessionType.proto";
import "version.proto";

import "public-service-category-status.proto";
import "public-service-tab.proto";
import "public-service-tab-code.proto";

package ua.gov.diia.publicservicecatalog;
option java_multiple_files = true;
option java_package = "ua.gov.diia.publicservicecatalog";

service PublicServiceCatalog {
    rpc CreatePublicService(PublicService) returns (PublicService) {
        option (google.api.http) = {
            post: "/api/v1/public-service"
        };
    }
    rpc CreatePublicServiceCategory(PublicServiceCategory) returns (PublicServiceCategory) {
        option (google.api.http) = {
            post: "/api/v1/public-service-category"
        };
    }
    rpc GetPublicServiceByCode(GetPublicServiceByCodeRequest) returns (ua.gov.diia.types.contextmenu.PublicServiceSettings) {
        option (google.api.http) = {
            get: "/api/v1/public-services/{code}"
        };
    }
    rpc GetPublicServiceCategoriesList(GetPublicServiceCategoriesListRequest) returns (GetPublicServiceCategoriesListResponse) {
        option (google.api.http) = {
            get: "/api/v1/public-service-categories"
        };
    }
    rpc GetPublicServiceCategoryByCategory(GetPublicServiceCategoryByCategoryRequest) returns (PublicServiceCategoryResult) {
        option (google.api.http) = {
            get: "/api/v1/public-service-categories/{category}"
        };
    }
    rpc GetPublicServiceContextMenuV2(GetPublicServiceContextMenuRequest) returns (GetPublicServiceContextMenuResponse);
    rpc GetPublicServiceSettingsV2(PublicServiceSettingsRequest) returns (ua.gov.diia.types.contextmenu.PublicServiceSettings);
    rpc GetPublicServices(google.protobuf.Empty) returns (GetPublicServicesResponse) {
        option (google.api.http) = {
            get: "/api/v3/public-service/catalog"
            additional_bindings {
                get: "/e-resident/api/v3/public-service/catalog"
            }
        };
    }
    rpc GetPublicServicesList(GetPublicServicesListRequest) returns (GetPublicServicesListResponse) {
        option (google.api.http) = {
            get: "/api/v1/public-services"
        };
    }
    rpc IsPublicServiceAvailableByCodeV2(IsPublicServiceAvailableRequest) returns (IsPublicServiceAvailableResponse);
    rpc UpdatePublicService(UpdatePublicServiceRequest) returns (PublicService) {
        option (google.api.http) = {
            put: "/api/v1/public-service"
        };
    }
    rpc UpdatePublicServiceCategory(UpdatePublicServiceCategoryRequest) returns (PublicServiceCategory) {
        option (google.api.http) = {
            put: "/api/v1/public-service-category"
        };
    }
}

message GetPublicServiceCategoryByCategoryRequest {
    string category = 1;
}

message GetPublicServiceCategoriesListRequest {
    optional int32 skip = 1;
    optional int32 limit = 2;
}

message GetPublicServiceCategoriesListResponse {
    int32 total = 1;
    repeated PublicServiceCategoryResult publicServiceCategories = 2;
}

message GetPublicServiceByCodeRequest {
    string code = 1;
}

message GetPublicServiceContextMenuRequest {
    string code = 1;
}

message GetPublicServiceContextMenuResponse  {
    repeated ua.gov.diia.types.contextmenu.PublicServiceContextMenu contextMenu = 1;
}

message PublicServiceSettingsRequest {
    string code = 1;
}

message GetPublicServicesResponse {
    repeated PublicServiceCategoryResponse publicServicesCategories = 1;
    repeated ua.gov.diia.publicservicecatalog.PublicServiceTab tabs = 2;
}

message GetPublicServicesListRequest {
    optional int32 skip = 1;
    optional int32 limit = 2;
}

message GetPublicServicesListResponse {
    int32 total = 1;
    repeated ua.gov.diia.types.contextmenu.PublicServiceSettings publicServices = 2;
}

message IsPublicServiceAvailableRequest {
    string code = 1;
    ua.gov.diia.types.session.SessionType sessionType = 2;
    optional ua.gov.diia.types.profilefeatures.UserFeatures features = 3;
}

message IsPublicServiceAvailableResponse {
    bool isAvailable = 1;
}

message UpdatePublicServiceRequest {
    string code = 1;
    optional string name = 2;
    optional int32 sortOrder = 3;
    optional ua.gov.diia.types.PublicServiceStatus status = 4;
    optional ua.gov.diia.types.appversion.PublicServiceAppVersionsBySession appVersions = 5;
    optional ua.gov.diia.types.appversion.SingleVersionRecord platformMinVersion = 6;
    optional ua.gov.diia.types.profilefeatures.ProfileFeature profileFeature = 7;
    repeated string segments = 8;
    repeated string categories = 9;
    repeated ua.gov.diia.types.contextmenu.PublicServiceContextMenu contextMenu = 10;
    repeated ua.gov.diia.types.session.SessionType sessionTypes = 11;
    map<string, string> locales = 12;
}

message UpdatePublicServiceCategoryRequest {
    string category = 1;
    optional string name = 2;
    optional string icon = 3;
    optional int32 sortOrder = 4;
    optional ua.gov.diia.publicservicecatalog.PublicServiceCategoryStatus status = 5;
    repeated ua.gov.diia.publicservicecatalog.PublicServiceTabCode tabCodes = 6;
    map<string, string> locales = 7;
}

message PublicServiceCategoryResponse {
    string code = 1;
    string icon = 2;
    string name = 3;
    PublicServiceCategoryStatus status = 4;
    bool visibleSearch = 5;
    int32 sortOrder = 6;
    repeated PublicServiceResponse publicServices = 7;
    ua.gov.diia.publicservicecatalog.PublicServiceTabCode tabCode = 8;
    repeated ua.gov.diia.publicservicecatalog.PublicServiceTabCode tabCodes = 9;
}

message PublicServiceResponse {
    string code = 1;
    string name = 2;
    ua.gov.diia.types.PublicServiceStatus status = 3;
    int32 sortOrder = 4;
    string search = 5;
    repeated ua.gov.diia.types.contextmenu.PublicServiceContextMenu contextMenu = 6;
}

message PublicService {
    string code = 1;
    string name = 2;
    int32 sortOrder = 3;
    ua.gov.diia.types.PublicServiceStatus status = 4;
    map<string, string> locales = 5;
    repeated string categories = 6;
    repeated string segments = 7;
    repeated ua.gov.diia.types.contextmenu.PublicServiceContextMenu contextMenu = 8;
    repeated ua.gov.diia.types.session.SessionType sessionTypes = 9;
    optional ua.gov.diia.types.appversion.PublicServiceAppVersionsBySession appVersions = 10;
    optional ua.gov.diia.types.appversion.SingleVersionRecord platformMinVersion = 11;
    optional ua.gov.diia.types.profilefeatures.ProfileFeature profileFeature = 12;
}

message PublicServiceCategory {
    string category = 1;
    string name = 2;
    string icon = 3;
    int32 sortOrder = 4;
    ua.gov.diia.publicservicecatalog.PublicServiceCategoryStatus status = 5;
    repeated ua.gov.diia.publicservicecatalog.PublicServiceTabCode tabCodes = 6;
    map<string, string> locales = 7;
}

message PublicServiceCategoryResult {
    // extends PublicServiceCategory
    string category = 1;
    string name = 2;
    string icon = 3;
    int32 sortOrder = 4;
    ua.gov.diia.publicservicecatalog.PublicServiceCategoryStatus status = 5;
    repeated ua.gov.diia.publicservicecatalog.PublicServiceTabCode tabCodes = 6;
    map<string, string> locales = 7;
    string id = 8;
}
